--- a/study_tracker.html
+++ b/study_tracker.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Study Timetable & Progress Tracker</title>
+  <title>Study Timetable & Hour Tracker</title>
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
@@ -13,7 +13,6 @@
     }
     h1, h2 {
       text-align: center;
-      margin-bottom: 10px;
     }
     .container {
       max-width: 900px;
@@ -37,19 +36,12 @@
       border-radius: 6px;
       background: #f0f2f5;
     }
-    .slot.completed {
+    .slot.done {
       background: #d4edda;
     }
-    button {
-      padding: 6px 12px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      background: #007bff;
-      color: white;
-    }
-    button.completed {
-      background: #28a745;
+    input[type="number"] {
+      width: 80px;
+      padding: 5px;
     }
     .progress-bar {
       height: 20px;
@@ -67,7 +59,6 @@
     .stats {
       display: flex;
       justify-content: space-between;
-      margin-top: 10px;
       font-size: 14px;
     }
     .weekly {
@@ -86,17 +77,11 @@
       font-weight: bold;
       color: #ff5722;
     }
-    .footer {
-      text-align: center;
-      margin-top: 30px;
-      font-size: 13px;
-      color: #666;
-    }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>📚 Study Timetable Tracker</h1>
+    <h1>📚 Study Hour Tracker</h1>
     <div class="date" id="date"></div>
 
     <div id="slots"></div>
@@ -106,19 +91,15 @@
     </div>
 
     <div class="stats">
-      <div id="completedCount"></div>
+      <div id="totalHours"></div>
       <div id="percentage"></div>
     </div>
 
     <div class="streak" id="streak"></div>
 
     <div class="weekly">
-      <h2>📆 Weekly Overview</h2>
+      <h2>📆 Weekly Overview (Hours)</h2>
       <div id="weekly"></div>
-    </div>
-
-    <div class="footer">
-      Built for disciplined learning • Flutter + DSA Journey
     </div>
   </div>
 
@@ -126,7 +107,7 @@
     const dateEl = document.getElementById('date');
     const slotsEl = document.getElementById('slots');
     const progressEl = document.getElementById('progress');
-    const completedCountEl = document.getElementById('completedCount');
+    const totalHoursEl = document.getElementById('totalHours');
     const percentageEl = document.getElementById('percentage');
     const weeklyEl = document.getElementById('weekly');
     const streakEl = document.getElementById('streak');
@@ -136,48 +117,49 @@
     dateEl.innerText = `Today: ${todayKey}`;
 
     const timetable = [
-      { time: '10:00 - 12:00', task: 'Flutter Learning' },
-      { time: '12:00 - 1:00', task: 'Flutter Practice' },
-      { time: '2:00 - 4:00', task: 'Python + DSA' },
-      { time: '6:45 - 7:45', task: 'Flutter Project Work' },
-      { time: '9:00 - 9:45', task: 'Revision / Planning' }
+      { time: '10:00 - 12:00', task: 'Flutter Learning', max: 2 },
+      { time: '12:00 - 1:00', task: 'Flutter Practice', max: 1 },
+      { time: '2:00 - 4:00', task: 'Python + DSA', max: 2 },
+      { time: '6:45 - 7:45', task: 'Flutter Project Work', max: 1 },
+      { time: '9:00 - 9:45', task: 'Revision / Planning', max: 0.75 }
     ];
 
     const storageKey = `study-${todayKey}`;
-    let progress = JSON.parse(localStorage.getItem(storageKey)) || {};
+    let data = JSON.parse(localStorage.getItem(storageKey)) || {};
 
     function render() {
       slotsEl.innerHTML = '';
-      let completed = 0;
+      let totalHours = 0;
+      let maxHours = timetable.reduce((s, t) => s + t.max, 0);
 
       timetable.forEach((slot, index) => {
-        const done = progress[index];
-        if (done) completed++;
+        const hours = data[index] || 0;
+        totalHours += hours;
 
         const div = document.createElement('div');
-        div.className = 'slot' + (done ? ' completed' : '');
+        div.className = 'slot' + (hours > 0 ? ' done' : '');
         div.innerHTML = `
           <div>
-            <strong>${slot.time}</strong><br />${slot.task}
+            <strong>${slot.time}</strong><br>${slot.task}
           </div>
-          <button class="${done ? 'completed' : ''}" onclick="toggle(${index})">
-            ${done ? 'Completed' : 'Mark Done'}
-          </button>`;
+          <div>
+            <input type="number" min="0" step="0.25" max="${slot.max}" value="${hours}" onchange="updateHours(${index}, this.value)"> h
+          </div>`;
         slotsEl.appendChild(div);
       });
 
-      const percent = Math.round((completed / timetable.length) * 100);
+      const percent = Math.min(100, Math.round((totalHours / maxHours) * 100));
       progressEl.style.width = percent + '%';
-      completedCountEl.innerText = `Completed: ${completed}/${timetable.length}`;
+      totalHoursEl.innerText = `Total Hours: ${totalHours.toFixed(2)} / ${maxHours}`;
       percentageEl.innerText = `Progress: ${percent}%`;
 
       updateWeekly();
       updateStreak();
     }
 
-    function toggle(index) {
-      progress[index] = !progress[index];
-      localStorage.setItem(storageKey, JSON.stringify(progress));
+    function updateHours(index, value) {
+      data[index] = parseFloat(value) || 0;
+      localStorage.setItem(storageKey, JSON.stringify(data));
       render();
     }
 
@@ -187,13 +169,12 @@
         const d = new Date();
         d.setDate(today.getDate() - i);
         const key = `study-${d.toDateString()}`;
-        const data = JSON.parse(localStorage.getItem(key));
-        const doneCount = data ? Object.values(data).filter(Boolean).length : 0;
-        const percent = Math.round((doneCount / timetable.length) * 100);
+        const dayData = JSON.parse(localStorage.getItem(key)) || {};
+        const hours = Object.values(dayData).reduce((a, b) => a + b, 0);
 
         const row = document.createElement('div');
         row.className = 'week-day';
-        row.innerHTML = `<span>${d.toDateString()}</span><span>${percent || 0}%</span>`;
+        row.innerHTML = `<span>${d.toDateString()}</span><span>${hours.toFixed(2)} h</span>`;
         weeklyEl.appendChild(row);
       }
     }
@@ -204,8 +185,8 @@
         const d = new Date();
         d.setDate(today.getDate() - i);
         const key = `study-${d.toDateString()}`;
-        const data = JSON.parse(localStorage.getItem(key));
-        if (data && Object.values(data).some(Boolean)) {
+        const dayData = JSON.parse(localStorage.getItem(key));
+        if (dayData && Object.values(dayData).reduce((a, b) => a + b, 0) > 0) {
           streak++;
         } else {
           break;
